--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
   <body>
     <div>
-      <h1>various talks given at certain places</h1>
+      <h1>look at all the talks I give</h1>
       <dl>
         <dt>Decoupling Persistence (Like There’s Some Tomorrow)</dt>
         <dd>…at <a href='src-2012'>Scottish Ruby Conference 2012</a></dd>
