THIS NEVER GETS OLD, DOES IT?

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </dl>
     </div>
     <footer>
-      <p><a href='https://chastell.net'>chastell.net</a> &nbsp; | &nbsp; <a href='mailto:chastell@chastell.net'>chastell@chastell.net</a></p>
+      <p><a href='https://chastell.net'>chastell.net</a> &nbsp; | &nbsp; designed by chastell in Mazovia</p>
     </footer>
   </body>
 </html>
