refresh the SRC 2012 talk

--- a/src-2012/index.html
+++ b/src-2012/index.html
@@ -802,7 +802,7 @@ class Logging
   def add_logging
     PrimeSelector.class_eval { include RCapture::Interceptable }
     PrimeSelector.capture_pre methods: :prime? do |point|
-      @log.debug "prime? called with #{point.args.first}"
+      @log.debug "prime? #{point.args.first}"
     end
 
 
@@ -824,10 +824,10 @@ class Logging
   def add_logging
     PrimeSelector.class_eval { include RCapture::Interceptable }
     PrimeSelector.capture_pre methods: :prime? do |point|
-      @log.debug "prime? called with #{point.args.first}"
+      @log.debug "prime? #{point.args.first}"
     end
     PrimeSelector.capture_post methods: :prime? do |point|
-      @log.debug "prime? returned #{point.return}"
+      @log.debug "prime? &#x2192; #{point.return}"
     end
   end
 end</code></pre></div>
