refresh the SRC 2012 talk

--- a/src-2012/index.html
+++ b/src-2012/index.html
@@ -955,8 +955,8 @@ renting.call</code></pre></div>
 </ul>
 </div>
 </div><div class="slide" data-transition="scrollRight"><div class="content center" ref="dci/dci/7">
-<p><img src="./file/dci/cops.jpg" alt="cops"/>
-<a href="http://tdpri.com/forum/2602851-post1573.html"><em>THE</em> Random Picture Thread</a></p></div>
+<p><img src="./file/dci/giraffe.jpg" alt="giraffe"/>
+<a href="http://www.johnnycheeseburger.com/post/1528439687">giraffes of iwo jima</a></p></div>
 </div><div class="slide" data-transition="scrollLeft"><div class="content bullets incremental" ref="decoupling/decoupling/1">
 <h1>going way overboard (?)</h1>
 
@@ -1057,8 +1057,8 @@ src.events = { parties: { saturday: 'Zo&#xEB; Keating concert' } }
 src.events.parties.saturday    #=&gt; 'Zo&#xEB; Keating concert'
 &#xA0;</code></pre></div>
 </div><div class="slide" data-transition="scrollRight"><div class="content center" ref="decoupling/decoupling/7">
-<p><img src="./file/decoupling/giraffe.jpg" alt="giraffe"/>
-<a href="http://www.johnnycheeseburger.com/post/1528439687">giraffes of iwo jima</a></p></div>
+<p><img src="./file/decoupling/cops.jpg" alt="cops"/>
+<a href="http://tdpri.com/forum/2602851-post1573.html"><em>THE</em> Random Picture Thread</a></p></div>
 </div><div class="slide" data-transition="scrollLeft"><div class="content bullets incremental" ref="summary/summary/1">
 <h1>world domination plans</h1>
 
