link the WRUG June 2012 lightning talk

--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
       <dl>
         <dt>Decoupling Persistence (Like There’s Some Tomorrow)</dt>
         <dd>…at <a href='src-2012'>Scottish Ruby Conference 2012</a></dd>
+        <dt>C-C-C-Combo Maker</dt>
+        <dd>…at <a href='wrug-2012-06'>Warsaw Ruby Users Group, June 2012</a> (lightning talk)</dd>
       </dl>
     </div>
     <footer>
