link the Lightning IO 2012 lightning talk

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
     <div>
       <h1>look at all the talks I give</h1>
       <dl>
+        <dt>From Here to Eternity</dt>
+        <dd>…at <a href='lightningio-2012'>Lightning IO 2012</a> (lightning talk)</dd>
         <dt>Decoupling Persistence (Like There’s Some Tomorrow)</dt>
         <dd>…at <a href='src-2012'>Scottish Ruby Conference 2012</a></dd>
         <dt>C-C-C-Combo Maker</dt>
