--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
     <div>
       <h1>look at all the talks I give</h1>
       <dl>
+        <dt>PStore: stdlib’s Persistence</dt>
+        <dd>…at <a href='wrug-2012-08'>Warsaw Ruby Users Group, August 2012</a> (lightning talk)</dd>
         <dt>From Here to Eternity</dt>
         <dd>…at <a href='lightningio-2012'>Lightning IO 2012</a> (lightning talk)</dd>
         <dt>Decoupling Persistence (Like There’s Some Tomorrow)</dt>
