link the eurucamp 2012 talk

--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
     <div>
       <h1>look at all the talks I give</h1>
       <dl>
+        <dt>Ruby on the Command-Line</dt>
+        <dd>…at <a href='eurucamp-2012'>eurucamp 2012</a></dd>
         <dt>PStore: stdlib’s Persistence</dt>
         <dd>…at <a href='wrug-2012-08'>Warsaw Ruby Users Group, August 2012</a> (lightning talk)</dd>
         <dt>From Here to Eternity</dt>
