--- a/index.html
+++ b/index.html
@@ -15,23 +15,20 @@
 
       a {
         color: inherit;
-        font-weight: bold;
         outline: none;
-        text-decoration: none;
         text-shadow: #999 1px 1px 3px;
-      }
-
-      a:hover {
-        text-decoration: underline;
       }
 
       body {
         background-color: #eee;
-        font-family: 'IM Fell English', Georgia, serif;
+        font-family: Georgia, serif;
         line-height: 1.5;
         margin: auto;
-        text-align: center;
         width: 40em;
+      }
+
+      dd {
+        font-family: Georgia, serif;
       }
 
       div {
@@ -45,17 +42,26 @@
       }
 
       dt {
-        font-weight: bold;
+        font-family: 'IM Fell English SC', 'IM Fell English', Georgia, serif;
+        font-size: 1.2em;
         margin-top: 1em;
       }
 
       footer {
+        font-family: 'IM Fell English', Georgia, serif;
         margin: 1em;
+        text-align: center;
+      }
+
+      footer a {
+        font-weight: bold;
+        text-decoration: none;
       }
 
       h1 {
         font-family: 'IM Fell English SC', 'IM Fell English', Georgia, serif;
         font-size: 2em;
+        text-align: center;
       }
     </style>
 
