link ArrrrCamp 2012 talk

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
     <div>
       <h1>look at all the talks I give</h1>
       <dl>
-        <dt>Persist, Little Objects!</dt>
+        <dt>Persist, Little Objects! | <a href='arrrrcamp-2012'>slides</a></dt>
         <dd>Object persistence in Ruby is a&nbsp;tricky subject – everyone knows how to do it (‘simply use an ORM, plug it into a&nbsp;relational database and you’re done!’), most know the drawbacks (‘well, sure, you need to use a&nbsp;document database for the more schema-less cases… or serialise the variable parts… and, of course, object references need to be handled separately…’), but few experiment with alternatives.</dd>
         <dd>This talk, after recalling the popular database-driven persistence solutions, concentrates on the less known, but more interesting and often quite useful approaches – from file-based PStore (ideal for small apps), through Candy’s out-of-the-way magic, to MagLev’s true cross-process transparent object persistence.</dd>
-        <dd>Accepted to <a href='http://arrrrcamp.be'>Arrrrcamp</a> 2012.</dd>
+        <dd>Given at <a href='http://arrrrcamp.be'>Arrrrcamp</a> 2012.</dd>
 
         <dt>Ruby on the Command-Line | <a href='eurucamp-2012'>slides</a></dt>
         <dd>Ruby, thanks to its various frameworks, is known to be the language for web applications – and recent developments in graphic libraries make it a&nbsp;worthy contestant in the world of GUI-driven desktop programs. But Ruby is also great for writing command-line applications; the ability to mix no-boilerplate toplevel functions with full-fledged OOP means its usage can vary from one-off trivial scripts to complicated, option-heavy commandline powerhouses.</dd>
