add RuPy 2012 talk info

--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
     <div>
       <h1>look at all the talks I give</h1>
       <dl>
+        <dt>Fly, You Tools!</dt>
+        <dd>As developers we heavily depend on our tools of the trade, as oftentimes mastering them means getting out of deep trouble so much faster.</dd>
+        <dd>This talk covers some lesser known features of our everyday infrastructure (like Git or PostgreSQL); tricks which make using these tools such a pleasure, regardles whether it’s for shaving yet another yak or saving one’s own skin.</dd>
+        <dd>Invited to <a href='http://rupy.eu'>RuPy</a> 2012.</dd>
+
         <dt>Persist, Little Objects! | <a href='arrrrcamp-2012'>slides</a></dt>
         <dd>Object persistence in Ruby is a&nbsp;tricky subject – everyone knows how to do it (‘simply use an ORM, plug it into a&nbsp;relational database and you’re done!’), most know the drawbacks (‘well, sure, you need to use a&nbsp;document database for the more schema-less cases… or serialise the variable parts… and, of course, object references need to be handled separately…’), but few experiment with alternatives.</dd>
         <dd>This talk, after recalling the popular database-driven persistence solutions, concentrates on the less known, but more interesting and often quite useful approaches – from file-based PStore (ideal for small apps), through Candy’s out-of-the-way magic, to MagLev’s true cross-process transparent object persistence.</dd>
