link RuPy 2012 talk

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div>
       <h1>look at all the talks I give</h1>
       <dl>
-        <dt>Fly, You Tools!</dt>
+        <dt>Fly, You Tools! | <a href='rupy-2012'>slides</a></dt>
         <dd>As developers we heavily depend on our tools of the trade, as oftentimes mastering them means getting out of deep trouble so much faster.</dd>
         <dd>This talk covers some lesser known features of our everyday infrastructure (like Git or PostgreSQL); tricks which make using these tools such a pleasure, regardles whether it’s for shaving yet another yak or saving one’s own skin.</dd>
         <dd>Invited to <a href='http://rupy.eu'>RuPy</a> 2012.</dd>
