refresh RuPy 2012 talk

--- a/rupy-2012/index.html
+++ b/rupy-2012/index.html
@@ -559,6 +559,7 @@ app/views/users/_baz.html.erb
 <li><a href="https://www.gnu.org/software/parallel/man.html">GNU <code>parallel</code></a> &#x2013; just&#x2026; read it (via Lucas di Cioccio)</li>
 <li><code>ncdu</code> &#x2013; check what takes so much space</li>
 <li><code>proxylocal</code> &#x2013; expose a local port to the public</li>
+<li><code>rmadison</code> &#x2013; Debian and Ubuntu versions of a given package</li>
 </ul>
 </div>
 </div><div class="slide" data-transition="scrollLeft"><div class="content bullets incremental small" ref="links/links/1">
