--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <dt>Fly, You Tools! | <a href='rupy-2012'>slides</a></dt>
         <dd>As developers we heavily depend on our tools of the trade, as oftentimes mastering them means getting out of deep trouble so much faster.</dd>
         <dd>This talk covers some lesser known features of our everyday infrastructure (like Git or PostgreSQL); tricks which make using these tools such a pleasure, regardles whether it’s for shaving yet another yak or saving one’s own skin.</dd>
-        <dd>Invited to <a href='http://rupy.eu'>RuPy</a> 2012.</dd>
+        <dd>Given at <a href='http://rupy.eu'>RuPy</a> 2012.</dd>
 
         <dt>Persist, Little Objects! | <a href='arrrrcamp-2012'>slides</a> | <a href='http://vimeo.com/album/2121090/video/51636332'>video</a></dt>
         <dd>Object persistence in Ruby is a&nbsp;tricky subject – everyone knows how to do it (‘simply use an ORM, plug it into a&nbsp;relational database and you’re done!’), most know the drawbacks (‘well, sure, you need to use a&nbsp;document database for the more schema-less cases… or serialise the variable parts… and, of course, object references need to be handled separately…’), but few experiment with alternatives.</dd>
