--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <dl>
         <dt>Fly, You Tools! | <a href='rupy-2012'>slides</a></dt>
         <dd>As developers we heavily depend on our tools of the trade, as oftentimes mastering them means getting out of deep trouble so much faster.</dd>
-        <dd>This talk covers some lesser known features of our everyday infrastructure (like Git or PostgreSQL); tricks which make using these tools such a pleasure, regardles whether it’s for shaving yet another yak or saving one’s own skin.</dd>
+        <dd>This talk covers some lesser known features of our everyday infrastructure (like Git or PostgreSQL); tricks which make using these tools such a pleasure, regardless whether it’s for shaving yet another yak or saving one’s own skin.</dd>
         <dd>Given at <a href='http://rupy.eu'>RuPy</a> 2012.</dd>
 
         <dt>Persist, Little Objects! | <a href='arrrrcamp-2012'>slides</a> | <a href='http://vimeo.com/album/2121090/video/51636332'>video</a></dt>
@@ -83,8 +83,8 @@
         <dd>Given at <a href='http://arrrrcamp.be'>Arrrrcamp</a> 2012.</dd>
 
         <dt>Ruby on the Command-Line | <a href='eurucamp-2012'>slides</a></dt>
-        <dd>Ruby, thanks to its various frameworks, is known to be the language for web applications – and recent developments in graphic libraries make it a&nbsp;worthy contestant in the world of GUI-driven desktop programs. But Ruby is also great for writing command-line applications; the ability to mix no-boilerplate toplevel functions with full-fledged OOP means its usage can vary from one-off trivial scripts to complicated, option-heavy commandline powerhouses.</dd>
-        <dd>This talk presetens the nits and bolts of writing a&nbsp;command-line application with Ruby – from option parsing and accessing standard input/output to playing nice with POSIX standards like exit codes and signal/interrupt handling.</dd>
+        <dd>Ruby, thanks to its various frameworks, is known to be the language for web applications – and recent developments in graphic libraries make it a&nbsp;worthy contestant in the world of GUI-driven desktop programs. But Ruby is also great for writing command-line applications; the ability to mix no-boilerplate top-level functions with full-fledged OOP means its usage can vary from one-off trivial scripts to complicated, option-heavy command-line powerhouses.</dd>
+        <dd>This talk presents the nits and bolts of writing a&nbsp;command-line application with Ruby – from option parsing and accessing standard input/output to playing nice with POSIX standards like exit codes and signal/interrupt handling.</dd>
         <dd>Given at <a href='http://eurucamp.org'>eurucamp</a> 2012.</dd>
 
         <dt>PStore: stdlib’s Persistence</dt>
@@ -107,7 +107,7 @@
         <dd><a href='wrug-2012-06'>Preview</a> (a lightning talk) from <a href='http://wrug.eu'>Warsaw Ruby Users Group</a>, June 2012.</dd>
 
         <dt>Persisting Relations Across Time and Space | <a href='rubyconf-2011'>slides</a> | <a href='http://confreaks.net/videos/657'>video</a></dt>
-        <dd>Entities and their relations are the backbone of most Ruby applications – from trivial, one-off commandline utilities to full-blown social network websites. The good old relational databases, while showing extreme abilities in both adaptation and survival, are no longer the obvious choice for persistence – and sometimes obviously not an ideal one.</dd>
+        <dd>Entities and their relations are the backbone of most Ruby applications – from trivial, one-off command-line utilities to full-blown social network websites. The good old relational databases, while showing extreme abilities in both adaptation and survival, are no longer the obvious choice for persistence – and sometimes obviously not an ideal one.</dd>
         <dd>This talk discusses various entity/relation modeling approaches and different persistence techniques – from rigid schemas in suits to collections of hippie free-form documents; from good old (transactional!) PStore through join-table-happy RDBMS-es and muscle-flexing NoSQL hools to (social!) graph databases, waiting patiently for broader recognition and prime time.</dd>
         <dd>Quite a&nbsp;few interesting Ruby libraries for gluing all this together are also pondered upon – from world-class champions like Active Record and ARel to less known gems like Candy and Ambition.</dd>
         <dd>Given at <a href='http://rubyconf.org'>RubyConf</a> 2011.</dd>
