--- a/index.html
+++ b/index.html
@@ -117,7 +117,11 @@
         <dd>This presentation, based on hands-on experience of using Ruby for scientific computations, shows how to profile Ruby applications (including webapps), how to interpret the results and what to do with the bottlenecks – from algorithmic optimisation through using dedicated libraries to rewriting them (in place!) in ‘faster’ languages.</dd>
         <dd>Given at <a href='http://euruko.org'>EuRuKo</a> 2010, <a href='http://rubyandrails.eu'>Ruby and Rails</a> 2010 and <a href='http://scottishrubyconference.com'>Scottish Ruby Conference</a> 2011.</dd>
 
-        <dt>Going Clean and Simple with minitest/spec</dt>
+        <dt>Standard Library, Uncommon Uses | (proposal)</dt>
+        <dd>Ruby’s stdlib comprises over a hundred libraries: from well known and popular (like `benchmark`, `irb` and `pp`) to lesser known, but no less useful – like `gserver`, `pstore` and `un`.</dd>
+        <dd>This talks shows some of the useful, clever and tricky uses of Ruby’s standard library that do not require the installation of any gems and can be used in any environment hosting any implementation of Ruby. Did you ever want to write your own server, do some distributed computing, don’t worry about persistence? It’s all there; come and see for yourself!</dd>
+
+        <dt>Going Clean and Simple with minitest/spec | (proposal)</dt>
         <dd>The Ruby community is known for praising well-tested code, with a&nbsp;lot of projects being developed in a&nbsp;test- (or spec-) driven fashion. minitest/spec is a&nbsp;simple and minimalistic DSL for behaviour specification and behaviour-driven development, gaining popularity ever since being a&nbsp;part of Ruby 1.9 standard library.</dd>
         <dd>This talk presents minitest/spec’s virtues and vices, the benefits and drawbacks of mocking with minitest/mock, as well as the interesting world of asserting algorithmic performance with minitest/benchmark.</dd>
       </dl>
