link Railsberry 2013 lightning talk

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
     <div>
       <h1>look at all the talks I give</h1>
       <dl>
+        <dt>Teaching Ruby Basics | <a href='railsberry-2013'>slides</a></dt>
+        <dd>A short lightning talk about lessons learned while teaching at Rails Girls Warsaw.</dd>
+        <dd>To be given at <a href='http://railsberry.com'>Railsberry</a> 2013.</dd>
+
         <dt>Fly, You Tools! | <a href='rupy-2012'>slides</a></dt>
         <dd>As developers we heavily depend on our tools of the trade, as oftentimes mastering them means getting out of deep trouble so much faster.</dd>
         <dd>This talk covers some lesser known features of our everyday infrastructure (like Git or PostgreSQL); tricks which make using these tools such a pleasure, regardless whether it’s for shaving yet another yak or saving one’s own skin.</dd>
