Railsberry lightning talk status: sadly, given

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       <dl>
         <dt>Teaching Ruby Basics | <a href='railsberry-2013'>slides</a></dt>
         <dd>A short lightning talk about lessons learned while teaching at Rails Girls Warsaw.</dd>
-        <dd>To be given at <a href='http://railsberry.com'>Railsberry</a> 2013.</dd>
+        <dd>Given at <a href='http://railsberry.com'>Railsberry</a> 2013.</dd>
 
         <dt>Fly, You Tools! | <a href='rupy-2012'>slides</a></dt>
         <dd>As developers we heavily depend on our tools of the trade, as oftentimes mastering them means getting out of deep trouble so much faster.</dd>
