adjust ‘Fly, You Tools!’ description

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
         <dt>Fly, You Tools! | <a href='rupy-2012'>slides</a></dt>
         <dd>As developers we heavily depend on our tools of the trade, as oftentimes mastering them means getting out of deep trouble so much faster.</dd>
-        <dd>This talk covers some lesser known features of our everyday infrastructure (like Git or PostgreSQL); tricks which make using these tools such a pleasure, regardless whether it’s for shaving yet another yak or saving one’s own skin.</dd>
+        <dd>This talk covers some lesser known features of our everyday infrastructure – Git, PostgreSQL and command-line; tricks which make using these tools such a pleasure, regardless whether it’s for shaving yet another yak or saving one’s own skin.</dd>
         <dd>Given at <a href='http://rupy.eu'>RuPy</a> 2012.</dd>
 
         <dt>Persist, Little Objects! | <a href='arrrrcamp-2012'>slides</a> | <a href='http://vimeo.com/album/2121090/video/51636332'>video</a></dt>
