adjust ‘Standard Library, Uncommon Uses’ description

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
         <dd>Given at <a href='http://euruko.org'>EuRuKo</a> 2010, <a href='http://rubyandrails.eu'>Ruby and Rails</a> 2010 and <a href='http://scottishrubyconference.com'>Scottish Ruby Conference</a> 2011.</dd>
 
         <dt>Standard Library, Uncommon Uses | (proposal)</dt>
-        <dd>Ruby’s stdlib comprises over a hundred libraries: from well known and popular (like `benchmark`, `irb` and `pp`) to lesser known, but no less useful – like `gserver`, `pstore` and `un`.</dd>
-        <dd>This talk shows some of the useful, clever and tricky uses of Ruby’s standard library that do not require the installation of any gems and can be used in any environment hosting any implementation of Ruby. Did you ever want to write your own server, do some distributed computing, don’t worry about persistence? It’s all there; come and see for yourself!</dd>
+        <dd>There are tonnes of little- or virtually unknown libraries in Ruby’s stdlib, and they found their way there for a reason. Much like revisiting `Enumerable`’s method list times and again makes you a better Ruby programmer, so does looking into its standard library – not only because there are things you didn’t know existed, but also because the way the’re implemented is often quite enlightening.</dd>
+        <dd>This talk shows some of the useful, clever and tricky uses of Ruby’s standard library – like GServer, DRb/Rinda, PStore, Ripper and SecureRandom – that do not require the installation of any gems and can be used in any environment hosting a Ruby implementation. Did you ever want to write your own server, do some distributed computing, don’t worry about persistence? It’s all there; come and see for yourself!</dd>
 
         <dt>Going Clean and Simple with minitest/spec | (proposal)</dt>
         <dd>The Ruby community is known for praising well-tested code, with a&nbsp;lot of projects being developed in a&nbsp;test- (or spec-) driven fashion. minitest/spec is a&nbsp;simple and minimalistic DSL for behaviour specification and behaviour-driven development, gaining popularity ever since being a&nbsp;part of Ruby 1.9 standard library.</dd>
