link WRUG July 2013 talk

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
     <div>
       <h1>look at all the talks I give</h1>
       <dl>
+        <dt>Bogus: A Brief Introduction | <a href='http://bogus-wrug-2013-07.herokuapp.com'>slides</a></dt>
+        <dd>An introduction to <a href='https://github.com/psyho/bogus'>Bogus</a>, a test double library that tracks doubles’ sync with reality.</dd>
+        <dd>Given at <a href='http://wrug.eu'>Warsaw Ruby Users Group</a>, July 2013.</dd>
+
         <dt>Teaching Ruby Basics | <a href='railsberry-2013'>slides</a></dt>
         <dd>A short lightning talk about lessons learned while teaching at Rails Girls Warsaw.</dd>
         <dd>Given at <a href='http://railsberry.com'>Railsberry</a> 2013.</dd>
