--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
     <div>
       <h1>look at all the talks I give</h1>
       <dl>
+        <dt>They Hear Me Typin’, They Hatin’ | <a href='http://keyboards-eurucamp-2013.herokuapp.com'>slides</a></dt>
+        <dd>Mechanical keyboard, how do I love thee?<br />Let me count the ways… &lt;clickety&gt; &lt;click&gt; &lt;clee&gt;</dd>
+        <dd>As programmers we spend a significant amount of our time typing, and – given the abundance of laptops – we often do it on whatever keyboard was chosen by our hardware’s manufacturer. While certain laptop brands are known to have stellar keyboards (and no less famous pointing devices), some of us yearn for the good old times of <a href='http://en.wikipedia.org/wiki/Model_M_keyboard'>IBM Model M</a>; yes, you could hear them from across the building, but once you played with one for some time you grew way more tolerant of its constant – if not distant – clicking.</dd>
+        <dd>This talk covers the current state of the mechanical keyboard world, the replacable keycap craze and all the fun you can possibly squeeze out of your daily fingertip companion – including some tips on how to configure your system to easily input all the weird characters needed now and then, from ♥ and ‰ to mëtäl ümläuts and ☭.</dd>
+        <dd>To be given at <a href='http://eurucamp.org'>eurucamp</a> 2013.</dd>
+
         <dt>Bogus: A Brief Introduction | <a href='http://bogus-wrug-2013-07.herokuapp.com'>slides</a></dt>
         <dd>An introduction to <a href='https://github.com/psyho/bogus'>Bogus</a>, a test double library that tracks doubles’ sync with reality.</dd>
         <dd>Given at <a href='http://wrug.eu'>Warsaw Ruby Users Group</a>, July 2013.</dd>
